samples/_failures_safe/1761304884_170ac9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_89debce0.c: In function ‘main’:
./samples/SAFE/__tmp_89debce0.c:170:5: error: expected declaration or statement at end of input
  170 |     printf("\nTokens found (%d):\n", token_count);
      |     ^~~~~~
